@@ -91,10 +91,12 @@ interface tx_oelib_Interface_Geo {
 
 	/**
 	 * Marks this object as having an error with the geo coordinates.
+     *
+     * @param string $reason
 	 *
 	 * @return void
 	 */
-	public function setGeoError();
+    public function setGeoError($reason = '');
 
 	/**
 	 * Marks this object as not having an error with the geo coordinates.
